aplicação do método SMOTE para resolver desbalanceamento

--- a/data_science_notebook.ipynb
+++ b/data_science_notebook.ipynb
@@ -1778,6 +1778,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número de componentes p/explicar 95% da variância é:  76\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('O número de componentes p/explicar 95% da variância é: ', n_components)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1838,6 +1855,132 @@
     "train_mice_imputed_pca.to_csv('data/train_mice_imputed_pca.csv', index=False)\n",
     "cv_mice_imputed_pca.to_csv('data/cv_mice_imputed_pca.csv', index=False)\n",
     "test_mice_imputed_pca.to_csv('data/test_mice_imputed_pca.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Corrigindo o balanceamento**\n",
+    "- Vamos utilizar o método SMOTE para aumentar a proporção de valores positivos (Class = 1) --> *oversampling*\n",
+    "- A classe minoritária (Class = 1) será aumentada para 50% da classe majoritária (Class = 0) --> *undersampling*\n",
+    "- Depois, vamos reduzir a classe majoritária (Class = 0) para ser 60% maior que a minoritária (Class = 1).\n",
+    "- Essa estratégia de oversampling seguida de undersampling é [recomendada pelos autores](https://arxiv.org/abs/1106.1813) do modelo para melhor performance.\n",
+    "\n",
+    "O SMOTE (*Synthetic Minotiry Oversampling Technique*) é um dos métodos mais populares para fazer *oversampling* em datasets desbalanceados. Ele cria valores sintéticos da classe minoritária com base nos valores existentes. [Saiba mais](https://machinelearningmastery.com/combine-oversampling-and-undersampling-for-imbalanced-classification/).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from imblearn.pipeline import Pipeline\n",
+    "\n",
+    "# carregando os datasets do PCA\n",
+    "train_mice_imputed_pca = pd.read_csv('data/train_mice_imputed_pca.csv')\n",
+    "cv_mice_imputed_pca = pd.read_csv('data/cv_mice_imputed_pca.csv')\n",
+    "test_mice_imputed_pca = pd.read_csv('data/test_mice_imputed_pca.csv')\n",
+    "\n",
+    "# dividindo em features (X) e resposta(y)\n",
+    "X_train_mice_imputed_pca = train_mice_imputed_pca.drop('class', axis=1)\n",
+    "y_train_mice_imputed_pca = train_mice_imputed_pca['class']\n",
+    "\n",
+    "\n",
+    "X_cv_mice_imputed_pca = cv_mice_imputed_pca.drop('class', axis=1)\n",
+    "y_cv_mice_imputed_pca = cv_mice_imputed_pca['class']\n",
+    "\n",
+    "X_test_mice_imputed_pca = test_mice_imputed_pca.drop('class', axis=1)\n",
+    "y_test_mice_imputed_pca = test_mice_imputed_pca['class']\n",
+    "\n",
+    "\n",
+    "# preparando o pipeline para o modelo\n",
+    "over = SMOTE(sampling_strategy=0.5,random_state=42) # oversampling a classe positiva em 50%\n",
+    "under = RandomUnderSampler(sampling_strategy=0.6) # undersampling a classe negativa em 60%\n",
+    "steps = [('o', over), ('u', under)]\n",
+    "pipeline = Pipeline(steps=steps)\n",
+    "\n",
+    "# transformando o dataset\n",
+    "X_train_mice_imputed_pca, y_train_mice_imputed_pca = pipeline.fit_resample(X_train_mice_imputed_pca, y_train_mice_imputed_pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "0.0      34415\n",
+       "1.0      20649\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(y_train_mice_imputed_pca).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset depois do balanceamento com SMOTE \n",
+      "====================Dados de treino====================\n",
+      "(55064, 76)\n",
+      "(55064,)\n",
+      "====================Dados de CV====================\n",
+      "(18000, 76)\n",
+      "(18000,)\n",
+      "====================Dados de teste====================\n",
+      "(16000, 76)\n",
+      "(16000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dataset depois do balanceamento com SMOTE ')\n",
+    "print('='*20+'Dados de treino'+'='*20)\n",
+    "print(X_train_mice_imputed_pca.shape)\n",
+    "print(y_train_mice_imputed_pca.shape)\n",
+    "print('='*20+'Dados de CV'+'='*20)\n",
+    "print(X_cv_mice_imputed_pca.shape)\n",
+    "print(y_cv_mice_imputed_pca.shape)\n",
+    "print('='*20+'Dados de teste'+'='*20)\n",
+    "print(X_test_mice_imputed_pca.shape)\n",
+    "print(y_test_mice_imputed_pca.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Salvando os datasets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump((X_train_mice_imputed_pca,y_train_mice_imputed_pca),open('data/mice_train_data.pkl','wb'))\n",
+    "pickle.dump((X_cv_mice_imputed_pca,y_cv_mice_imputed_pca),open('data/mice_cv_data.pkl','wb'))\n",
+    "pickle.dump((X_test_mice_imputed_pca,y_test_mice_imputed_pca),open('data/mice_test_data.pkl','wb'))"
    ]
   },
   {
