--- a/data_science_notebook.ipynb
+++ b/data_science_notebook.ipynb
@@ -1994,6 +1994,186 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Carregando os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carrega os datasets que passaram pelo MICE e PCA\n",
+    "X_train, y_train = pickle.load(open('data/mice_train_data.pkl', 'rb'))\n",
+    "X_cv,y_cv = pickle.load(open('data/mice_cv_data.pkl', 'rb'))\n",
+    "X_test, y_test = pickle.load(open('data/mice_test_data.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====================Dados de Treino====================\n",
+      "(55064, 76)\n",
+      "(55064,)\n",
+      "====================Dados CV====================\n",
+      "(18000, 76)\n",
+      "(18000,)\n",
+      "====================Dados de Teste====================\n",
+      "(16000, 76)\n",
+      "(16000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('='*20+'Dados de Treino'+'='*20)\n",
+    "print(X_train.shape)\n",
+    "print(y_train.shape)\n",
+    "print('='*20+'Dados CV'+'='*20)\n",
+    "print(X_cv.shape)\n",
+    "print(y_cv.shape)\n",
+    "print('='*20+'Dados de Teste'+'='*20)\n",
+    "print(X_test.shape)\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funções para gráficos da modelagem:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para plotar um heatmap da confusion matrix\n",
+    "\n",
+    "def cm_heatmap(cm):\n",
+    "  A =(((cm.T)/(cm.sum(axis=1))).T)\n",
+    "  B =(cm/cm.sum(axis=0))\n",
+    "  labels = [0,1]\n",
+    "  plt.figure(figsize=(20,5))\n",
+    "  plt.subplot(1,3,1);\n",
+    "  sns.heatmap(cm, annot=True, fmt=\".3f\",cmap='Blues',xticklabels=labels, yticklabels=labels);\n",
+    "\n",
+    "  # labels, title and ticks\n",
+    "  plt.xlabel('Valores Previstos');\n",
+    "  plt.ylabel('Valores Reais'); \n",
+    "  plt.title('Confusion Matrix');\n",
+    "  plt.show();\n",
+    "  plt.savefig('img/confusion_matrix.png');\n",
+    "  plt.close();\n",
+    "  \n",
+    "  plt.subplot(1,3,2)\n",
+    "  sns.heatmap(B, annot=True, fmt=\".3f\",cmap='Blues',xticklabels=labels, yticklabels=labels)\n",
+    "  plt.xlabel('Valores Previstos');\n",
+    "  plt.ylabel('Valores Reais'); \n",
+    "  plt.title('Precision Matrix');\n",
+    "  plt.show();\n",
+    "  plt.savefig('img/precision_matrix.png');\n",
+    "  plt.close();\n",
+    "\n",
+    "\n",
+    "  ax = plt.subplot(1,3,3)\n",
+    "  sns.heatmap(A, annot=True, fmt=\".3f\",cmap='Blues',xticklabels=labels, yticklabels=labels)\n",
+    "  plt.xlabel('Valores Previstos');\n",
+    "  plt.ylabel('Valores Reais'); \n",
+    "  plt.title('Recall Matrix');\n",
+    "  plt.show();\n",
+    "  plt.savefig('img/recall_matrix.png');\n",
+    "  plt.close();  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plota o scatterplot do cross validation\n",
+    "def cv_plot(results,alpha):\n",
+    "  train_score = results['mean_train_score']\n",
+    "  cv_score = results['mean_test_score']\n",
+    "\n",
+    "  plt.plot(alpha, train_score, label='f1-macro - Treino')\n",
+    "  plt.plot(alpha, cv_score, label='f1-macro - CV')\n",
+    "\n",
+    "  plt.scatter(alpha, train_score, label='f1-macro - Treino')\n",
+    "  plt.scatter(alpha, cv_score, label='f1-macro - CV')\n",
+    "\n",
+    "  plt.legend()\n",
+    "  plt.xlabel(\"alpha: hyperparameter\")\n",
+    "  plt.ylabel(\"f1-macro\")\n",
+    "  plt.title(\"ERROR PLOTS\")\n",
+    "  plt.grid()\n",
+    "  plt.show()\n",
+    "  plt.savefig('img/cv_plot.png')\n",
+    "  plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retorna o melhor modelo em termos de custo\n",
+    "def best_prob(y_predicted,y_actual,p):\n",
+    "  y_pred=[]\n",
+    "  cost_list=[]\n",
+    "  for i in p:\n",
+    "    for j in y_predicted:\n",
+    "      if j>=i:\n",
+    "        y_pred.append(1)\n",
+    "      else:\n",
+    "        y_pred.append(0)\n",
+    "\n",
+    "    cm = confusion_matrix(y_actual,y_pred)\n",
+    "    tn, fp, fn, tp = cm.ravel()\n",
+    "    cost = (10 * fp) + (500 * fn)\n",
+    "    cost_list.append(cost)\n",
+    "    y_pred=[]\n",
+    "  best_cost = min(cost_list)\n",
+    "  best_p = p[cost_list.index(best_cost)]\n",
+    "  return best_p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Método de Modelagem**:\n",
+    "\n",
+    "1. Vamos criar um modelo aleatório (*dumb model*) que classificará todas as ocorrências como pertencentes à classe majoritária (negativa). Usando esse modelo, obteremos o pior valor para nossa métrica, que é o **F1-Macro Score**. Com esse score, podemos avaliar o desempenho dos outros modelos de ML.\n",
+    "\n",
+    "2. Vamos treinar o conjunto de dados em modelos convencionais como Regressão Logística, *Decision Trees*, *Random Forest* e XGBoost.\n",
+    "\n",
+    "3. Realizaremos ajuste de hiperparâmetros em todos esses modelos usando GridSearchCV e RandomizedSearchCV. Em seguida, iremos re-treinar os modelos com os melhores valores de parâmetros obtidos do ajuste de hiperparâmetros. Em seguida, calcularemos o F1-Macro nos dados de Treino, CV (validação cruzada) e Teste para todos esses modelos.\n",
+    "\n",
+    "4. Em nosso problema, o custo de falsos negativos (FN) é maior do que o custo de falsos positivos (FP). **Isso significa que mais importância deve ser dada ao recall em comparação com a precisão.** Portanto, teremos que ajustar o threshold de probabilidade (valor padrão = 0,5).\n",
+    "\n",
+    "5. A métrica de custo mencionada no problema é: Custo = (10 x FP) + (500 x FN).\n",
+    "\n",
+    "6. O threshold de probabilidade correto será aquele que resultar no custo mínimo.\n",
+    "\n",
+    "7. Usaremos a **precision recall curve** do sklearn para obter os valores do threshold de probabilidade. Ela calcula pares de precisão-recall para diferentes thresholds. Usando esses thresholds, calcularemos o custo e selecionaremos threshold que resultar no menor custo. Utilizaremos os dados de Validação Cruzada para determinar esse valor de limiar de probabilidade.\n",
+    "\n",
+    "8. Com esse threshold de probabilidade, vamos prever a classe para os Dados de Treino, CV e Teste e calcularemos o custo de Treino, CV e Teste para todos os modelos. O modelo que resultar no **menor Custo de Teste** será considerado o melhor modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 7. Communication"
    ]
   }
