--- a/data_science_notebook.ipynb
+++ b/data_science_notebook.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,6 @@
     "from sklearn.metrics import f1_score\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import xgboost as xgb\n",
@@ -81,7 +80,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.metrics import precision_recall_curve\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import joblib"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[5 rows x 171 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,27 +421,6 @@
    "source": [
     "df_train = pd.read_csv('data/air_system_previous_years.csv')\n",
     "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16000, 171)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test = pd.read_csv('data/air_system_present_year.csv')\n",
-    "df_test.shape"
    ]
   },
   {
@@ -3397,7 +3376,6 @@
    ],
    "source": [
     "# Salvando o melhor modelo e threshold\n",
-    "import joblib\n",
     "\n",
     "# Salva o modelo calibrado de Random Forest e sua melhor threshold\n",
     "model_data = {\n",
@@ -3415,7 +3393,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Communication"
+    "# **7. Communication**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Responder às perguntas abaixo:\n",
+    "\n",
+    "To solve this problem we want you to answer the following questions:\n",
+    "\n",
+    "1. What steps would you take to solve this problem? Please describe as completely and clearly as possible all the steps that you see as\n",
+    "essential for solving the problem.\n",
+    "\n",
+    "2. Which technical data science metric would you use to solve this challenge? Ex: absolute error, rmse, etc.\n",
+    "\n",
+    "3. Which business metric would you use to solve the challenge?\n",
+    "\n",
+    "4. How do technical metrics relate to the business metrics?\n",
+    "\n",
+    "5. What types of analyzes would you like to perform on the customer database?\n",
+    "\n",
+    "6. What techniques would you use to reduce the dimensionality of the problem?\n",
+    "\n",
+    "7. What techniques would you use to select variables for your predictive model?\n",
+    "\n",
+    "8. What predictive models would you use or test for this problem? Please indicate at least 3.\n",
+    "\n",
+    "9. How would you rate which of the trained models is the best?\n",
+    "\n",
+    "10. How would you explain the result of your model? Is it possible to know which variables are most important?\n",
+    "\n",
+    "11. How would you assess the financial impact of the proposed model?\n",
+    "\n",
+    "12. What techniques would you use to perform the hyperparameter optimization of the chosen model?\n",
+    "\n",
+    "13. What risks or precautions would you present to the customer before putting this model into production?\n",
+    "\n",
+    "14. If your predictive model is approved, how would you put it into production?\n",
+    "\n",
+    "15. If the model is in production, how would you monitor it?\n",
+    "\n",
+    "16. If the model is in production, how would you know when to retrain it?"
    ]
   }
  ],
